<resources>
    <string name="app_name">Baking App</string>
    <string name="recipe_not_available">Recipe not available</string>
    <string name="description">Description:</string>
    <string name="next_step">Next step</string>
    <string name="previous_step">Previous step</string>
    <string name="no_video_message">No video message</string>
    <string name="video_not_available">Video not available</string>
    <string name="title_activity_step">StepActivity</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="step_icon">Step icon</string>
    <string name="widget_recipe_name">Widget recipe name</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="starting_widget_image">Starting widget image</string>
    <string name="please_add_recipe_from_the_app">Please add recipe from the app!</string>
</resources>
