<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/playerView"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/description"
                tools:layout_editor_absoluteX="5dp" />

            <TextView
                android:id="@+id/step_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:buttonBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/previous_step_button"
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:background="#48b983"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="@string/previous_step"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent">
    </View>

    <Button
        style="?android:buttonBarButtonStyle"
        android:id="@+id/next_step_button"
        android:layout_width="match_parent"
        android:text="@string/next_step"
        android:background="#48b983"
        android:textColor="@android:color/white"
        android:layout_weight="0.5"
        android:layout_height="wrap_content" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>